# CI

./: .gitignore  CMakeLists.txt  build.bat  build.py  build.sh  test.bat
SqliteTest/: build.bat
SqliteTest/SqliteTest/: Cache.cpp  Cache.h  SqliteTest.cpp  SqliteTest.sln  SqliteTest.vcxproj  SqliteTest.vcxproj.filters
SqliteTest/SqliteTest/Common/: DBHelper.cpp  DBHelper.h  DataBase.cpp  DataBase.h
app/: CMakeLists.txt  CoolTime.hpp  main.cpp
helloworld/: build-arm.sh  build.bat
helloworld/app/: CMakeLists.txt  main.cpp
helloworld/test/: test.cpp
test/: CMakeLists.txt  test.cpp
tools/: DownloadLib.py  FileTree.py  ListFile.py
